objects/OrderTaskConfig__mdt/OrderTaskConfig__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type to Create adhoc Tasks for Vein to Vein to manage outbound integrations.</description>
    <label>Order Task Config</label>
    <pluralLabel>Order Tasks Config</pluralLabel>
</CustomObject>