objects/OrderTaskConfig__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>set Active the current metadata to create tasks</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>