objects/OrderTaskConfig__mdt/fields/TaskStatus__c.field-meta.xml
<CustomField>
    <fullName>TaskStatus__c</fullName>
    <description>Status for the tasks </description>
    <label>Task Status</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>